--- a/src/app/components/user/dashboard/dashboard.component.css
+++ b/src/app/components/user/dashboard/dashboard.component.css
@@ -61,3 +61,7 @@
   background: linear-gradient(135deg, #289cf5, #84c0ec) !important;
   color: #fff;
 }
+
+.card-col{
+  background: rgb(127, 52, 141);
+}
