--- a/src/app/components/general/home/home.component.css
+++ b/src/app/components/general/home/home.component.css
@@ -2,3 +2,20 @@
   /* background-image: url("../../../../assets/img/home-bg.jpg"); */
   background: rgba(170, 31, 31, 0.6),;
 }
+
+.bg-color{
+  background: rgb(18, 109, 128);
+}
+
+.bg-yellow{
+  background: rgb(135, 217, 234);
+}
+.btn-col{
+  background: #abc7d8;
+}
+.btn-col:hover{
+  color: white;
+}
+
+
+
