--- a/src/app/components/user/user-login/user-login.component.html
+++ b/src/app/components/user/user-login/user-login.component.html
@@ -1,4 +1,15 @@
 <app-nav-bar></app-nav-bar>
+
+<ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="rgb(207, 159, 255)"
+  type="ball-scale-multiple"
+>
+  <p style="font-size: 25px; color: white">Please wait...</p>
+</ngx-spinner>
+
+
 <div class="row mt-5">
   <div class="col-6 m-auto">
   <div class="card m-auto">
@@ -6,10 +17,10 @@
       <h3>Login</h3>
     </div>
     <div class="card-body">
-      <form #loginForm='ngForm' (ngSubmit)="onLogin(loginForm)">
+      <form #loginForm='ngForm' (ngSubmit)="login(loginForm)">
         <div class="form-group col-12">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" required ngModel name="userName">
+            <label for="name" class="form-label">Email</label>
+            <input type="text" class="form-control" required ngModel name="email">
         </div>
 
         <div class="form-group col-12">
