--- a/src/app/components/general/home/home.component.html
+++ b/src/app/components/general/home/home.component.html
@@ -6,10 +6,10 @@
       <div class="row gx-5 justify-content-center">
           <div class="col-lg-6">
               <div class="text-center my-5">
-                  <h1 class="display-5 fw-bolder text-white mb-2">Welcome to Bank of Africa!</h1>
-                  <p class="lead text-white mb-4">The internet banking app to carry out all kinds of transactions from anywhere around the world with ease</p>
+                  <h1 class="display-6 fw-bolder text-white mb-2">Welcome to Bank of Africa!</h1>
+                  <p class="mb-4 text-white">The internet banking app to carry out all kinds of transactions from anywhere around the world with ease</p>
                   <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                      <a class="btn btn-col btn-lg px-4 me-sm-3"  [routerLink]="['sign-up']">Sign Up</a>
+                      <a class="btn btn-col2 btn-lg px-4 me-sm-3"  [routerLink]="['sign-up']">Sign Up</a>
                       <a class="btn btn-outline-light btn-lg px-4" [routerLink]="['open-account']">Open a Bank Account</a>
                   </div>
               </div>
@@ -23,7 +23,7 @@
       <div class="container px-lg-5">
           <div class="row gx-lg-5">
               <div class="col-lg-6 col-xxl-4 mb-5">
-                  <div class="card bg-yellow border-0 h-100">
+                  <div class="card bg-yellow border-3 h-100">
                       <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                           <div class="feature btn-col bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-collection"></i></div>
                           <h2 class="fs-4 fw-bold text-white">Transafer Money</h2>
