--- a/src/app/components/user/layout/layout.component.html
+++ b/src/app/components/user/layout/layout.component.html
@@ -95,7 +95,7 @@ type="ball-scale-multiple"
       <div class="modal-content">
           <div class="modal-header">
               <h5 class="modal-title">Send Money</h5>
-              <button type="button" class="btn-close mx-4 mt-4" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button (click)="refreshPage()" type="button" class="btn-close mx-4 mt-4" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
 
