--- a/src/app/components/user/user-register/user-register.component.html
+++ b/src/app/components/user/user-register/user-register.component.html
@@ -148,7 +148,9 @@
 
               <div *ngIf="emailOTPValid === 0">
                 <label class="form-label">Confirm OTP sent to -
-                  <b>{{registrationForm.controls['email'].value}}</b></label>
+                  <b>{{registrationForm.controls['email'].value}}</b></label>    <small class="form-hint">
+                   Use <strong>1234</strong> as OTP
+                  </small>
                 <div>
                   <div class="input-group mb-2">
                     <input type="text" class="form-control" placeholder="Enter OTP" [(ngModel)]="emailOTP"
